Creato nuovo template per il filtraggio dei prodotti su cui è stato implementato filtraggio su prodotti e modifica numero di righe per pagina,

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -121,7 +121,7 @@
                         {% block footer %}
                     <div class="footer">
                         <div class="pull-right">
-                            <a href="http://www-qweb.eu">Credits</a>
+                            <a href="http://www.qweb.eu">Credits</a>
                         </div>
                         <div>
                             <strong>Copyright</strong> Qwebsrl &copy; 2014-2015
