--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
@@ -29,8 +29,7 @@
     </div>#}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Prodotti</h5>
-        {#<span>{{ pagination.getTotalItemCount }} prodotti totali</span>#}
+        <h5>Prodotti <span>{{ pagination.getTotalItemCount }}</span></h5>
         <div class="ibox-tools">
             <a class="btn btn-primary btn-xs" href="{{ path('create_product') }}">Crea nuovo Prodotto</a>
             <a class="collapse-link">
@@ -46,11 +45,13 @@
     </div>
     <div class="ibox-content">
         <div class="table-responsive">
+            {{ knp_pagination_filter(pagination, {'title': 'Nome Prodotto', 'shortDescription': 'Descrizione', 'idTblCatalogueProduct':'Id'}) }}
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                     <tr>
                         {# sorting of properties based on query components #}
-                        <th>{{ knp_pagination_sortable(pagination, '#', 'a.idTblCatalogueProduct') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>
+                        <th>Foto</th>
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Codice', 'a.cod') }}</th>
@@ -58,12 +59,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                {# table body #}
-                {#
-                {{ knp_pagination_filter(pagination, {'product.title': 'Nome Prodotto', 'product.shortDescription': 'Descrizione'}) }}
-                #}
                 {% for product in pagination %}
                     <tr {% if loop.index is odd %}class="color"{% endif %}>
+                        <td>{{ product.id }}</td>
                         <td>{{ product.id }}</td>
                         <td>{{ product.title }}</td>
                         <td>{{ product.shortDescription }}</td>
