--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
@@ -35,23 +35,27 @@
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
             </a>
+
+            {#
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-wrench"></i>
             </a>
-            <!--<a class="close-link">
+            <a class="close-link">
                 <i class="fa fa-times"></i>
-            </a>-->
+            </a>
+            #}
         </div>
     </div>
     <div class="ibox-content">
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Prodotto', 'shortDescription': 'Descrizione', 'idTblCatalogueProduct':'Id'}) }}
+        <div class="clearfix"></div>
         <div class="table-responsive">
-            {{ knp_pagination_filter(pagination, {'title': 'Nome Prodotto', 'shortDescription': 'Descrizione', 'idTblCatalogueProduct':'Id'}) }}
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                     <tr>
                         {# sorting of properties based on query components #}
                         <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>
-                        <th>Foto</th>
+                        <th>Stato</th>
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Codice', 'a.cod') }}</th>
@@ -62,13 +66,13 @@
                 {% for product in pagination %}
                     <tr {% if loop.index is odd %}class="color"{% endif %}>
                         <td>{{ product.id }}</td>
-                        <td>{{ product.id }}</td>
+                        <td>{% if product.pub == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>{{ product.title }}</td>
                         <td>{{ product.shortDescription }}</td>
                         <td>{{ product.cod }}</td>
                         <td>
-                            <a href="/product/update/{{product.idTblCatalogueProduct}}" title="Modifica"><i class="fa fa-edit"></i></a>
-                            <a href="/product/delete/{{product.idTblCatalogueProduct}}" title="Elimina"><i class="fa fa-times"></i></a>
+                            <a href="/product/update/{{product.idTblCatalogueProduct}}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
+                            <a href="/product/delete/{{product.idTblCatalogueProduct}}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
