Cambiato nome del parametro custom inserito nel HTTP Header che indica l'id dell'album nel caricamento delle foto.

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -201,7 +201,7 @@
                 parallelUploads: 10,
                 maxFiles: 100,
                 addRemoveLinks: true,
-                headers:{"id_album": "{{ product.idTblPhotoCat }}"},
+                headers:{"id-album": "{{ product.idTblPhotoCat }}"},
 
                 // Dropzone settings
                 init: function() {
