--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -42,7 +42,7 @@
                                 <div class="form-group">
                                     {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.description) }}
-                                    {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                                    {{ form_widget(form.description, {'attr': {'class': 'form-control tinymce'}}) }}
                                 </div>
                                 <div class="form-group">
                                     {{ form_label(form.shortDescription, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
@@ -186,4 +186,5 @@
 
         });
     </script>
+    {{ tinymce_init() }}
 {% endblock %}
