--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -54,7 +54,7 @@
                                     {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'col-sm-2 control-label'}}) }}
                                     {{ form_errors(form.description) }}
                                     <div class="col-sm-10">
-                                        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                                        {{ form_widget(form.description, {'attr': {'class': 'form-control tinymce'}}) }}
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -226,5 +226,5 @@
 
         });
     </script>
-
+    {{ tinymce_init() }}
 {% endblock %}
