--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -33,25 +33,33 @@
                     {% endif %}
                         <div class="panel-body">
 
-                            <div class="col-md-6">
+                            <div class="col-lg-12">
                                 <div class="form-group">
                                     {{ form_label(form.title, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.title) }}
                                     {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                    {{ form_errors(form.description) }}
-                                    {{ form_widget(form.description, {'attr': {'class': 'form-control tinymce'}}) }}
-                                </div>
-                                <div class="form-group">
                                     {{ form_label(form.shortDescription, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.shortDescription) }}
                                     {{ form_widget(form.shortDescription, {'attr': {'class': 'form-control'}}) }}
                                 </div>
+                                <div class="form-group">
+                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.description) }}
+                                    {{ form_widget(form.description, {'attr': {'class': 'form-control tinymce'}}) }}
+                                </div>
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    {{ form_label(form.cod, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.cod) }}
+                                    {{ form_widget(form.cod, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(form.pub, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.pub) }}
@@ -61,6 +69,9 @@
                                         </label>
                                     </div>
                                 </div>
+                            </div>
+
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(form.position, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.position) }}
@@ -68,7 +79,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <div class="form-group">
                                     {{ form_label(form.categories, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
                                     {{ form_errors(form.categories) }}
@@ -85,7 +96,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
                                 {{ form_label(form.save, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
                                 {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
@@ -123,7 +134,7 @@
                     <div id="tab-3" class="tab-pane">
                         <div class="panel-body">
                             <div class="col-md-12">
-                                <div class="html5imageupload" data-originalsave="true" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
+                                <div class="html5imageupload" data-smaller="true" data-canvas-image-only="true" data-originalsize="false" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
                                     <input type="file" name="thumb" />
                                 </div>
                             </div>
@@ -161,7 +172,7 @@
                 parallelUploads: 10,
                 maxFiles: 100,
                 addRemoveLinks: true,
-                headers:{"id_album": "{{ id_album }}"},
+                headers:{"id-album": "{{ id_album }}"},
 
                 // Dropzone settings
                 init: function() {
