Icone HTML5 IMAGE UPLOAD portate su FontAwesome

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -156,7 +156,7 @@
                     <div id="tab-5" class="tab-pane">
                         <div class="panel-body">
                             <div class="col-md-12">
-                                <div class="html5imageupload" data-smaller="true" data-canvas-image-only="true" data-originalsize="false" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
+                                <div class="html5imageupload" data-smaller="true" data-canvas-image-only="true" data-originalsize="false" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true" style="width: 800px;">
                                     <input type="file" name="thumb" />
                                 </div>
                             </div>
