--- a/web/assets/css/html5imageupload.css
+++ b/web/assets/css/html5imageupload.css
@@ -4,7 +4,7 @@ html, body						{ font-family: arial; }
 
 .html5imageupload						{ background-color: #eeeeee; text-align: center; position: relative; border: 1px solid #dddddd; display: inline-block;  }
 .html5imageupload:after					{ content: 'Drop your image here or click to add one!'; font-size: 30px; color: #bbbbbb; position: absolute; bottom: 60%; left: 0; width: 100%; text-align: center; z-index:0;}
-.html5imageupload:before				{ content: ''; font-family:"Glyphicons Halflings"; font-size: 60px; color: #dbdbdb; position: absolute; top: 40%; left: 0; width: 100%; text-align: center; z-index:0;}
+.html5imageupload:before				{ content: ''; font-family:"FontAwesome"; font-size: 60px; color: #dbdbdb; position: absolute; top: 40%; left: 0; width: 100%; text-align: center; z-index:0;}
 
 .html5imageupload.loading:after			{ content: 'Please wait, image is loading'; }
 .html5imageupload.loading:before		{ content: ''; }
