--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
@@ -28,6 +28,7 @@
     <div class="ibox-title">
         <h5>Categorie</h5>
         <div class="ibox-tools">
+            <a class="btn btn-primary btn-xs" href="{{ path('create_category') }}">Crea nuova Categoria</a>
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
             </a>
