--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -26,8 +26,9 @@
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Prodotti</h5>
+        <h5>Feature</h5>
         <div class="ibox-tools">
+            <a class="btn btn-primary btn-xs" href="{{ path('create_features') }}">Crea nuova Feature</a>
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
             </a>
