--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
@@ -61,7 +61,7 @@
                         </td>
                         <td>
                             <a href="/featurevalues/update/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Modifica"><i class="fa fa-edit"></i></a>
-                            <a href="/featurevalues/delete/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Elimina"><i class="fa fa-times"></i></a>
+                            <a href="/featurevalues/delete/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Elimina"><i class="fa fa-trash-o"></i></a>
                         </td>
                     </tr>
                     {% endfor %}
