--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -122,8 +122,7 @@
                                         <button type="submit" class="btn btn-primary pull-right save_image">Salva Immagini</button>
                                     </div>
                                     <div class="col-md-12">
-                                        {{ form_label(form.saveAndExit, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
-                                        {{ form_widget(form.saveAndExit, {'attr': {'class': 'btn btn-primary'}}) }}
+                                        <button type="submit" class="btn btn-primary" name="exit" id="exit">Salva ed Esci</button>
                                     </div>
                                 </div>
                             </div>
@@ -133,9 +132,17 @@
 
                     <div id="tab-3" class="tab-pane">
                         <div class="panel-body">
-                            <div class="col-md-12">
-                                <div class="html5imageupload" data-smaller="true" data-canvas-image-only="true" data-originalsize="false" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
-                                    <input type="file" name="thumb" />
+                            <div class="ibox float-e-margins">
+                                <div class="ibox-title">
+                                    <h5>Immagine Prodotto Personalizzata</h5>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="html5imageupload" data-smaller="true" data-canvas-image-only="true" data-originalsize="false" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
+                                        <input type="file" name="thumb" />
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary" name="exit" id="exit">Salva ed Esci</button>
                                 </div>
                             </div>
                         </div>
