Modifica etichette dei Tab su flusso creazione nuovo Prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -17,12 +17,12 @@
                 <ul class="nav nav-tabs">
                     {% if id_album > 0 %}
                     <li class=""><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
-                    <li class="active"><a data-toggle="tab" href="#tab-2">Info Aggiuntive</a></li>
-                    <li class=""><a data-toggle="tab" href="#tab-3">HTML5 IMAGE UPLOAD</a></li>
+                    <li class="active"><a data-toggle="tab" href="#tab-2">Immagini</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-3">Personalizza</a></li>
                     {% else %}
                     <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
                     <li class="disabled"><a>Immagini</a></li>
-                    <li class="disabled"><a>HTML5 IMAGE UPLOAD</a></li>
+                    <li class="disabled"><a>Personalizza</a></li>
                     {% endif %}
                 </ul>
                 <div class="tab-content">
