Inserito refresh di pagina al termine del caricamento simultaneo di immagini, nascosta risposta http

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -219,6 +219,9 @@
                     });
                     this.on("errormultiple", function(files, response) {
                     });
+                    this.on("queuecomplete", function(files, response) {
+                        setTimeout("location.reload(true);", 1000);
+                    });
                 }
 
             }
