Allineata UI di categorie a UI di prodotti

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
@@ -8,71 +8,65 @@
 {% endblock %}
 
 {% block pagetitle %}
-    <div class="row wrapper border-bottom white-bg page-heading">
-        <div class="col-sm-4">
-            <h2>Lista Categorie</h2>
-            <ol class="breadcrumb">
-                <li>
-                    <a href="/">Dashboard</a>
-                </li>
-                <li class="active">
-                    <strong>Categorie</strong>
-                </li>
-            </ol>
-        </div>
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-4">
+        <h2>Lista Categorie</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                <strong>Categorie</strong>
+            </li>
+        </ol>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Categorie</h5>
+        <h5>Categorie <span>{{ pagination.getTotalItemCount }}</span></h5>
         <div class="ibox-tools">
             <a class="btn btn-primary btn-xs" href="{{ path('create_category') }}">Crea nuova Categoria</a>
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
             </a>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-wrench"></i>
-            </a>
-            <!--<a class="close-link">
-                <i class="fa fa-times"></i>
-            </a>-->
         </div>
     </div>
     <div class="ibox-content">
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Categoria', 'idTblCatalogueCategory':'Id'}) }}
+        <div class="clearfix"></div>
         <div class="table-responsive">
-            <table class="table table-striped" >
+            <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Nome Categoria</th>
-                    <th>Descrizione</th>
-                    <th>Azioni</th>
-                </tr>
+                    <tr>
+                        {# sorting of properties based on query components #}
+                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>
+                        <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.description') }}</th>
+                        <th>Azioni</th>
+                    </tr>
                 </thead>
                 <tbody>
-
-                {% for category in categories %}
-                    <tr>
+                {% for category in pagination %}
+                    <tr {% if loop.index is odd %}class="color"{% endif %}>
+                        <td>{{category.idTblCatalogueCategory}}</td>
+                        <td>{{category.title}}</td>
+                        <td>{{category.description}}</td>
                         <td>
-                            {{category.idTblCatalogueCategory}}
-                        </td>
-                        <td>
-                            {{category.title}}
-                        </td>
-                        <td>
-                            {{category.description}}
-                        </td>
-                        <td>
-                            <a href="/category/update/{{category.idTblCatalogueCategory}}" title="Modifica"><i class="fa fa-edit"></i></a>
-                            <a href="/category/delete/{{category.idTblCatalogueCategory}}" title="Elimina"><i class="fa fa-times"></i></a>
+                            <a href="{{ path('update_category', {'id' : category.idTblCatalogueCategory}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
+                            <a href="{{ path('delete_category', {'id' : category.idTblCatalogueCategory}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
 
                 </tbody>
             </table>
+            {# display navigation #}
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
     </div>
 </div>
