--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -8,68 +8,55 @@
 {% endblock %}
 
 {% block pagetitle %}
-    <div class="row wrapper border-bottom white-bg page-heading">
-        <div class="col-sm-4">
-            <h2>Lista Feature</h2>
-            <ol class="breadcrumb">
-                <li>
-                    <a href="/">Dashboard</a>
-                </li>
-                <li class="active">
-                    <strong>Feature</strong>
-                </li>
-            </ol>
-        </div>
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-4">
+        <h2>Lista Feature</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                <strong>Feature</strong>
+            </li>
+        </ol>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Feature</h5>
+        <h5>Feature <span>{{ pagination.getTotalItemCount }}</span></h5>
         <div class="ibox-tools">
             <a class="btn btn-primary btn-xs" href="{{ path('create_features') }}">Crea nuova Feature</a>
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
             </a>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-wrench"></i>
-            </a>
-            <!--<a class="close-link">
-                <i class="fa fa-times"></i>
-            </a>-->
         </div>
     </div>
     <div class="ibox-content">
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Feature', 'idTblCatalogueFeature':'Id'}) }}
+        <div class="clearfix"></div>
         <div class="table-responsive">
-            <table class="table table-striped" >
+            <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Nome</th>
-                    <th>Descrizione</th>
-                    <th>Tipo di input</th>
-                    <th>Azione</th>
-                </tr>
+                    <tr>
+                        {# sorting of properties based on query components #}
+                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueFeature') }}</th>
+                        <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Feature', 'a.title') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Tipo di input', 'a.typeInput') }}</th>
+                        <th>Azioni</th>
+                    </tr>
                 </thead>
                 <tbody>
-                    {% for feature in features %}
-                    <tr>
+                    {% for feature in pagination %}
+                    <tr {% if loop.index is odd %}class="color"{% endif %}>
+                        <td>{{feature.idTblCatalogueFeature}}</td>
+                        <td>{{feature.title}}</td>
+                        <td>{{feature.typeInput}}</td>
                         <td>
-                            {{feature.idTblCatalogueFeature}}
-                        </td>
-                        <td>
-                            {{feature.title}}
-                        </td>
-                        <td>
-                            {{feature.description}}
-                        </td>
-                        <td>
-                            {{feature.typeInput}}
-                        </td>
-                        <td>
-                            <a href="/feature/update/{{feature.idTblCatalogueFeature}}" title="Modifica"><i class="fa fa-edit"></i></a>
-                            <a href="/feature/delete/{{feature.idTblCatalogueFeature}}" title="Elimina"><i class="fa fa-times"></i></a>
+                            <a href="{{ path('update_features', {'id' : feature.idTblCatalogueFeature}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
+                            <a href="{{ path('delete_features', {'id' : feature.idTblCatalogueFeature}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
                         </td>
                     </tr>
                     {% endfor %}
