--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -99,7 +99,7 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
-                            <a href="/logout">
+                            <a href="{{ path('logout') }}">
                                 <i class="fa fa-sign-out"></i> Log out
                             </a>
                         </li>
