--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -62,6 +62,10 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {# display navigation #}
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
     </div>
 </div>
