--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -10,16 +10,19 @@
     <link rel="stylesheet" href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
 
-{% block content %}
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-lg-12">
-        <h2>Modifica "{{ product.title }}"</h2>
-        <h4>Categoria:</h4>
-        {% for category  in product.categories %}
-            <span>{{ category.title }}</span>
-        {% endfor %}
+{% block pagetitle %}
+    <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="col-lg-12">
+            <h2>Modifica "{{ product.title }}"</h2>
+            <h4>Categoria:</h4>
+            {% for category  in product.categories %}
+                <span>{{ category.title }}</span>
+            {% endfor %}
+        </div>
     </div>
-</div>
+{% endblock %}
+
+{% block content %}
 
 <div class="wrapper wrapper-content animated fadeInRight ecommerce">
     {{ form_start(form) }}
@@ -112,8 +115,16 @@
                             </div>
 
                             <div class="col-md-12">
+                                <p>
+                                    <button type="button" class="btn btn-warning " id="ordina-foto">
+                                        <i class="fa fa-wrench"></i>&nbsp;&nbsp;
+                                        <span class="bold">Ordina Foto</span>
+                                    </button>
+                                    <button class="btn btn-w-m btn-success" type="button" id="chiudi-ordina-foto">Chiudi</button>
+                                </p>
+
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-stripped">
+                                    <table id="table-immagini" class="table table-bordered table-stripped">
                                         <thead>
                                         <tr>
                                             <th>
@@ -143,6 +154,18 @@
                                         {% endfor %}
                                         </tbody>
                                     </table>
+                                </div>
+
+                                <div class="dd" id="nestable">
+                                    <ol class="dd-list">
+                                        {% for immagine in immagini %}
+                                        <li class="dd-item" data-id="{{ immagine.idTblPhoto }}">
+                                            <div class="dd-handle">
+                                                <img class="img-responsive" src="{{ asset(immagine.img) | imagine_filter('img_preview') }}" />
+                                            </div>
+                                        </li>
+                                        {% endfor %}
+                                    </ol>
                                 </div>
                             </div>
 
@@ -179,9 +202,6 @@
 
 {% block javascripts %}
 
-    <!-- SUMMERNOTE -->
-    <script src="{{ asset('admin-style/js/plugins/summernote/summernote.min.js') }}"></script>
-
     <!-- DROPZONE -->
     <script src="{{ asset('admin-style/js/plugins/dropzone/dropzone.js') }}"></script>
 
@@ -190,6 +210,9 @@
 
     <!-- SWEET ALERT -->
     <script src="{{ asset('admin-style/js/plugins/sweetalert/sweetalert.min.js') }}"></script>
+
+    <!-- Nestable List -->
+    <script src="{{ asset('admin-style/js/plugins/nestable/jquery.nestable.js') }}"></script>
 
     <script>
         $(document).ready(function(){
@@ -232,7 +255,7 @@
                 e.preventDefault();
                 var tr_parent = $(this).parent().parent();
                 var a_href = $(this).attr('href');
-                console.log(a_href);
+                //console.log(a_href);
                 $.ajax({
                     method: "POST",
                     url: a_href,
@@ -271,11 +294,40 @@
                 });
             });*/
 
-
+            var updateOutput = function (e) {
+                var list = e.length ? e : $(e.target);
+                if (window.JSON) {
+                    //output.val(window.JSON.stringify(list.nestable('serialize')));//, null, 2));
+                    $.ajax({
+                        type: 'GET',
+                        url: '{{ path('update_position_photo') }}',
+                        data: { foto: window.JSON.stringify(list.nestable('serialize')) },
+                        dataType: 'json'
+                    })
+                    .done(function(data){
+                        //console.log(data.data);
+                    });
+                } else {
+                    output.val('JSON browser support required for this demo.');
+                }
+            };
+            // activate Nestable
+            $('#nestable').nestable({
+                group: 1
+            }).on('change', updateOutput);
+            $('#nestable').hide();
+            $('#chiudi-ordina-foto').hide();
+            $('#ordina-foto').click(function(){
+                $('#nestable').show();
+                $('#chiudi-ordina-foto').show();
+                $('#table-immagini').hide();
+            });
+            $('#chiudi-ordina-foto').click(function(){
+                $('#table-immagini').show();
+                $('#nestable').hide();
+                $('#chiudi-ordina-foto').hide();
+            })
         });
     </script>
     {{ tinymce_init() }}
-    <script>
-
-    </script>
 {% endblock %}
