--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -51,6 +51,19 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_label(form.indirizzo, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.indirizzo) }}
+                                    {{ form_widget(form.indirizzo, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form_label(form.coordinate, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.coordinate) }}
+                                    {{ form_widget(form.coordinate, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            </div>
+
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(form.cod, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
