--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -57,6 +57,19 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_label(form.indirizzo, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.indirizzo) }}
+                                    {{ form_widget(form.indirizzo, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form_label(form.coordinate, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.coordinate) }}
+                                    {{ form_widget(form.coordinate, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            </div>
+
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(form.cod, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
@@ -85,6 +98,7 @@
                                 </div>
                             </div>
 
+
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     {{ form_label(form.categories, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
@@ -94,10 +108,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group ">
-                                    {{ form_label(form.featurevalues, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
-                                    {{ form_errors(form.featurevalues) }}
-                                    <div class="col-lg-12 m-l-n">
-                                        {{ form_widget(form.featurevalues, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
+                                    <div>
+                                        {{ form_label(form.featurevalues, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                                        {{ form_errors(form.featurevalues) }}
+                                        <div class="col-lg-12 m-l-n">
+                                            {{ form_widget(form.featurevalues, {'attr': {'class': ''}}) }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
